<resources>
    <string name="app_name">Meal Tracking App</string>
    <string name="home_name">Home</string>
    <string name="meals_name">Meals</string>
    <string name="recipes_name">Recipes</string>
    <string name="search_name">Search</string>
    <string name="calories_name">Calories</string>
    <string name="nutrition_name">Nutrition</string>
    <string name="weight_name">Weight</string>

    <string name="seven_day_chart">7 Days</string>
    <string name="thirty_day_chart">30 Days</string>
    <string name="ninety_day_chart">90 Days</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>